--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -1,1 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/soho-light/theme.css";
+@import "primeflex/primeflex.min.css";
