--- a/ui/src/app/resultats/resultats.component.html
+++ b/ui/src/app/resultats/resultats.component.html
@@ -10,7 +10,7 @@
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-rowData let-columns="colsSports">
-    <tr>
+    <tr [pSelectableRow]="rowData">
       <td *ngFor="let col of colsSports">
         {{rowData[col.field]}}
       </td>
@@ -18,7 +18,7 @@
   </ng-template>
 </p-table>
 
-<p-dialog header="Classement" [visible]="selectedSport !== undefined" [modal]="true" [style]="{width: '50vw'}">
+<p-dialog header="Classement" [visible]="selectedSport !== undefined" [modal]="true" [style]="{width: '50vw'}" (onHide)="selectedSport = undefined" [closeOnEscape]="true">
   <ng-container>
     <div *ngFor="let item of selectedSport?.classement || []">
       {{item.nom}} - {{item.nationalite}} - {{item.place}} - {{item.temps}}
