--- a/ui/src/app/resultats/resultats.component.html
+++ b/ui/src/app/resultats/resultats.component.html
@@ -1,4 +1,5 @@
 <p-table [value]="sports"
+         #table
          selectionMode="single"
          [(selection)]="selectedSport"
 >
@@ -18,7 +19,7 @@
   </ng-template>
 </p-table>
 
-<p-dialog header="Classement" [visible]="selectedSport !== undefined" [modal]="true" [style]="{width: '50vw'}" (onHide)="selectedSport = undefined" [closeOnEscape]="true">
+<p-dialog header="Classement" [visible]="selectedSport !== undefined" [modal]="true" [style]="{width: '50vw'}" (onHide)="hide()" [closeOnEscape]="true">
   <ng-container *ngIf="selectedSport">
     <div *ngFor="let item of selectedSport.classement || []">
       {{item.nom}} - {{item.nationalite}} - {{item.place}} - {{item.temps}}
