--- a/ui/src/app/resultats/resultats.component.html
+++ b/ui/src/app/resultats/resultats.component.html
@@ -21,9 +21,24 @@
 
 <p-dialog header="Classement" [visible]="selectedSport !== undefined" [modal]="true" [style]="{width: '50vw'}" (onHide)="hide()" [closeOnEscape]="true">
   <ng-container *ngIf="selectedSport">
-    <div *ngFor="let item of selectedSport.classement || []">
-      {{item.nom}} - {{item.nationalite}} - {{item.place}} - {{item.temps}}
-    </div>
+      <table>
+          <thead>
+          <tr>
+              <th>Nom</th>
+              <th>Nationalite</th>
+              <th>Place</th>
+              <th>Temps</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let item of selectedSport.classement || []">
+              <td>{{item.nom}}</td>
+              <td>{{item.nationalite}}</td>
+              <td>{{item.place}}</td>
+              <td>{{item.temps}}</td>
+          </tr>
+          </tbody>
+      </table>
   </ng-container>
   <p-footer>
     <button type="button" pButton icon="pi pi-times" (click)="selectedSport = undefined" label="Close"></button>
